--- a/package.json
+++ b/package.json
@@ -20,23 +20,28 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/poppins": "^4.5.1",
-    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.0.10",
+    "@walletconnect/web3-provider": "^1.7.1",
+    "@web3auth/web3auth": "^0.3.2",
     "dayjs": "^1.10.7",
     "framer-motion": "^5",
     "fuse.js": "^6.5.3",
     "gray-matter": "^4.0.3",
     "hamburger-react": "^2.4.1",
+    "magic-sdk": "^8.0.1",
     "next": "^12.0.10",
-    "next-mdx-remote": "^2.1.4",
+    "next-mdx-remote": "^4.0.0",
     "next-seo": "^4.28.1",
     "prism-react-renderer": "^1.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-moralis": "^1.3.1",
     "reading-time": "^1.5.0",
     "remark-code-titles": "^0.1.2",
-    "remark-slug": "^7.0.1"
+    "remark-slug": "^7.0.1",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "next-sitemap": "^1.6.203",
