--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@fontsource/poppins": "^4.5.1",
     "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.0.10",
-    "@walletconnect/web3-provider": "^1.7.1",
+    "@walletconnect/web3-provider": "^1.7.3",
     "@web3auth/web3auth": "^0.3.2",
     "dayjs": "^1.10.7",
     "eth-hooks": "^4.0.44",
@@ -32,6 +32,7 @@
     "gray-matter": "^4.0.3",
     "hamburger-react": "^2.4.1",
     "magic-sdk": "^8.0.1",
+    "moralis": "^1.3.5",
     "next": "^12.0.10",
     "next-mdx-remote": "^4.0.0",
     "next-seo": "^4.28.1",
@@ -39,7 +40,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-moralis": "^1.3.1",
+    "react-moralis": "^1.3.2",
     "reading-time": "^1.5.0",
     "remark-code-titles": "^0.1.2",
     "remark-slug": "^7.0.1",
